# ai-quant-scenario-engine

./: .gitignore  AGENTS.md  BSL-1.1  LICENSE  PHASE1_IMPLEMENTATION_NOTES.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.claude/: get-api-key.sh  run
.codex/: parallel_execution_skill.md
.serena/: project.yml
docs/data-sources/: README.md  parallel-execution.md  parallel-runbook.md  schwab_contract.md
docs/runbooks/: option-optimizer.md
docs/user-guide/: STRATEGY_OPTIMIZER_GUIDE.md
examples/: analyze_strategy_positions.py  strategy_comparison_demo.py
planning/: Canonical_Trading_Strategies.md  FEATURE_COMPUTATION_SUMMARY.md  METRICS_INTERPRETATION_GUIDE.md  Option_Spead_Candiate_Optimizer.md  STRATEGY_REFERENCE.md  plan_v2.md  project_goals.md  project_log.md  project_log_009.md  project_overview.md  spec_v2.md  tasks_round_2.md  tasks_v1.md  user_scratchpad_fav_commands.md  yfinance_specs.md
qse/cli/: main.py  validation.py
qse/config/: validation.py
qse/data/: __init__.py  data_loader.py  factory.py  macro.py  schwab.py  validation.py  versioning.py  yfinance.py
qse/distributions/: ar_detection.py  distribution_audit.py  factory.py  garch_t.py  laplace.py  normal.py  path_generator.py  regime_loader.py  student_t.py
qse/features/: pipeline.py  registry.py
qse/interfaces/: __init__.py  distribution.py  option_leg.py  pricing.py  regime.py  strategy.py
qse/mc/: generator.py
qse/monitoring/: __init__.py  monitor.py  position.py
quant_scenario_engine/: exceptions.py
scripts/: parallel-launch.sh  parallel_tmux.sh
(+175 files in other folders)
