[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-scenario-engine"
version = "0.1.0"
description = "Quant scenario engine for backtesting and Monte Carlo workflows"
authors = [{ name = "Quant Scenario Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "numba>=0.58",
  "statsmodels>=0.14",
  "arch>=6.3",
  "pandas-ta>=0.3",
  "quantstats>=0.0.62",
  "plotly>=5.18",
  "yfinance>=0.2",
  "typer[all]>=0.9",
  "pytest>=7.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-mock>=3.12",
  "hypothesis>=6.88",
  "ruff>=0.6",
  "black>=24.3",
  "mypy>=1.8"
]

[tool.hatch.build.targets.wheel]
packages = ["quant_scenario_engine"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "W", "UP"]
ignore = []
exclude = [".venv", "build", "dist"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
